--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "test",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "tuto",
-  "main": "index.js",
+  "description": "Backend for 2EAT",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Yvan",
-  "license": "ISC"
+  "keywords": [
+    "express",
+    "nodejs",
+    "mongoDB",
+    "mongoose"
+  ],
+  "author": "Yvan Epale",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "mongoose-unique-validator": "^4.0.0",
+    "multer": "^1.4.5-lts.1"
+  }
 }
