--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,6 +45,8 @@ jobs:
           node-version: 18.16.1
           cache: "npm"
 
+      - name: Generate dependencies lock file
+        run: npm ci
       - name: Install dependencies and run tests
         run: |
           npm install
