--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,33 +30,33 @@ jobs:
         run: |
           npm install
 
-  #unit-test:
-   # runs-on: ubuntu-latest
-    #timeout-minutes: 30
-    #needs: build
+  # unit-test:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 30
+  #   needs: build
 
-    #steps:
-     # - name: Checkout repository
-      #  uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      #- name: Set up Node.js
-       # uses: actions/setup-node@v4
-        #with:
-         # node-version: 18.16.1
-          #cache: "npm"
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 18.16.1
+  #         cache: "npm"
 
-      #- name: Generate dependencies lock file
-       # run: npm ci
-      #- name: Install dependencies and run tests
-       # run: |
-        #  npm install
-         # npm test
+  #     - name: Generate dependencies lock file
+  #       run: npm ci
+  #     - name: Install dependencies and run tests
+  #       run: |
+  #         npm install
+  #         npm test
 
   create-deployment-artefacts:
    
     name: Create deployment artefacts
     runs-on: ubuntu-latest
-    needs: unit-test
+    needs: build
     steps:
       - uses: actions/checkout@v2
 
